# fastapi-fleamarket

./: README.md  docker-compose.yaml  pyproject.toml
api/: alembic.ini  database.py  main.py
api/cruds/: item.py
api/migrations/: env.py
api/migrations/versions/: e54bed702242_create_items_table.py
api/models/: item.py
api/routers/: item.py
api/schemas/: item.py
